--- a/index.html
+++ b/index.html
@@ -12,12 +12,29 @@
 </head>
 
 <body>
-    <div class="container container-table">
-        <div class="row vertical-center-row">
-            <div class="text-center col-md-4 col-md-offset-4">
-                <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get Aha Data! </button>
+    <form>
+        <div>
+            <label> Company Aha ID (first part of your id.aha.io) </label>
+            <input required />
+        </div>
+        <div>
+            <label>Roadmap List ID (first set of numbers after custom_pivot in your url) </label>
+            <input required />
+        </div>
+        <div>
+            <label> API key </label>
+            <input required />
+        </div>
+        <div class="container container-table">
+            <div class="row vertical-center-row">
+                <div class="text-center col-md-4 col-md-offset-4">
+                    <button type="button" id="submitButton" class="btn btn-success" style="margin: 10px;">Get Aha Data! </button>
+                </div>
             </div>
         </div>
-    </div>
+    </form>
+
+
+ 
 </body>
 </html>
