seeing if it works with api key input field

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <form>
         <div>
             <label> Company Aha ID (first part of your id.aha.io) </label>
-            <input required />
+            <input type="text" id="company-id" required />
         </div>
         <div>
             <label>Roadmap List ID (first set of numbers after custom_pivot in your url) </label>
-            <input required />
+            <input type="text" id="list-id" required />
         </div>
         <div>
             <label> API key </label>
-            <input required />
+            <input type="text" id="api-key" required />
         </div>
         <div class="container container-table">
             <div class="row vertical-center-row">
