attempt at some form styling and other little things

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
 <body>
     <form>
-        <div>
-            <label> Company Aha ID (first part of your id.aha.io) </label>
+        <div class="form-group">
+            <label for="company-id"> Company Aha ID (first part of your id.aha.io) </label>
             <input type="text" id="company-id" required />
         </div>
-        <div>
-            <label>Roadmap List ID (first set of numbers after custom_pivot in your url) </label>
+        <div class="form-group">
+            <label for="list-id">Roadmap List ID (first set of numbers after custom_pivot in your url) </label>
             <input type="text" id="list-id" required />
         </div>
-        <div>
-            <label> API key </label>
+        <div class="form-group">
+            <label for="api-key"> API key </label>
             <input type="text" id="api-key" required />
         </div>
         <div class="container container-table">
