--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <form class="form-horizontal">
+    <form>
         <div class="form-group">
             <label for="company-id"> Company Aha ID (first part of your id.aha.io) </label>
          
