--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
         <div class="form-group">
             <label for="company-id"> Company Aha ID (first part of your id.aha.io) </label>
             <div class="col-md-8">
-                <input type="text" id="company-id" placeholder="Company ID" required />
+                <input type="text" id="company-id" placeholder="Company ID" value="ge-dw" required />
             </div>
         </div>
 
         <div class="form-group">
             <label for="list-id">Roadmap List ID (first set of numbers after custom_pivot in your url) </label>
             <div class="col-md-8">
-                <input type="text" id="list-id" placeholder="List ID" required />
+                <input type="text" id="list-id" placeholder="List ID" value="6837530641511890383" required />
             </div>
             
         </div>
         <div class="form-group">
             <label for="api-key"> API key </label>
             <div class="col-md-8">
-                <input type="text" id="api-key" placeholder="API Key" required />
+                <input type="text" id="api-key" placeholder="API Key" value="6ca8cd130f172749edff6c83ad90630ec3d1b081dd5b8570226c8f3fa087b641" required />
             </div>
 
         </div>
