removed list id in html value

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="form-group">
             <label for="list-id">Roadmap List ID (first set of numbers after custom_pivot in your url) </label>
             <div class="col-md-8">
-                <input type="text" id="list-id" placeholder="List ID" value="6837552190915186586" required />
+                <input type="text" id="list-id" placeholder="List ID" required />
             </div>
             
         </div>
