--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="form-group">
             <label for="company-id"> Company Aha ID (first part of your id.aha.io) </label>
             <div class="col-md-8">
-                <input type="text" id="company-id" placeholder="Company ID" value="ge-dw" required />
+                <input type="text" id="company-id" placeholder="Company ID" required />
             </div>
         </div>
 
@@ -30,7 +30,7 @@
         <div class="form-group">
             <label for="api-key"> API key </label>
             <div class="col-md-8">
-                <input type="text" id="api-key" placeholder="API Key" value="6ca8cd130f172749edff6c83ad90630ec3d1b081dd5b8570226c8f3fa087b641" required />
+                <input type="text" id="api-key" placeholder="API Key" required />
             </div>
 
         </div>
